fix: 修改spacing.scss中一处样式错误

--- a/src/spacing.scss
+++ b/src/spacing.scss
@@ -45,7 +45,7 @@
     margin-right: #{$d * 4}px;
   }
 
-  .px-#{$d} {
+  .px-#{$d * 4} {
     padding-left: #{$d * 4}px;
     padding-right: #{$d * 4}px;
   }
